[package]
name = "fetiched"
version = "0.4.0"
edition = "2024"
description = "Daemon component of Fetiche."
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
fetiche-macros.workspace = true
hcl-rs.workspace = true
directories.workspace = true
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

actix = "0.13"
actix-rt = "2.10"
actix-storage = { version = "0.3", features = ["serde", "serde-json", "serde-cbor"] }
actix-storage-dashmap = { version = "0.3", features = ["actor", "delay-queue"] }
parquet = { version = "53.0", features = ["json", "async", "cli"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dev-dependencies]
rstest.workspace = true

