[package]
name = "format-specs"
version = "0.9.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Various input file formats for cat21conv."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/drone-gencsv"
categories = ["aerospace::drones"]
keywords = ["cat21", "asterix", "drones", "aeronautical-data"]

[features]
default = ["privacy"]
privacy = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.1.6"
influxdb = "0.6"
log = { version = "0.4.17", features = ["serde", "std"] }
percent-encoding = "2.2.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.86"
serde_repr = "0.1.10"
stderrlog = "0.5.4"
