[package]
name = "fetiche-formats"
version = "0.15.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Various input file formats for the Fetiche framework."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["asterix", "drones", "aeronautical-data", "ads-b"]

[features]
default = ["privacy"]
privacy = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
dateparser.workspace = true
eyre.workspace = true
hcl-rs.workspace = true
influxdb.workspace = true
log.workspace = true
nom.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
strum.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

arrow2 = { version = "0.17", features = ["io_json", "io_json_integration", "io_parquet"] }
arrow2_convert = "0.5"
serde_arrow = { version = "0", features = ["arrow2-0-17"] }
parquet2 = { version = "0.17", features = ["zstd"] }
csv = "1.3"
percent-encoding = "2.3"
parquet = { version = "49.0", features = ["json", "async", "cli"] }
parquet_derive = "49.0"
tap = "1.0"
zstd = "0.13"

[dev-dependencies]
rstest.workspace = true
