[package]
name = "fetiche-formats"
version = "0.17.2"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Various input file formats for the Fetiche framework."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["asterix", "drones", "aeronautical-data", "ads-b"]

[features]
default = ["privacy"]
privacy = []
flightaware = []
safesky = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
csv.workspace = true
datafusion.workspace = true
dateparser.workspace = true
eyre.workspace = true
fetiche-common.workspace = true
hcl-rs.workspace = true
log.workspace = true
nom.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
strum.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

percent-encoding = "2.3"
tap = "1.0"
zstd = "0.13"

[dev-dependencies]
rstest.workspace = true
