[package]
name = "fetiche-formats"
version = "0.18.0"
edition = "2024"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Various input file formats for the Fetiche framework."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["asterix", "drones", "aeronautical-data", "ads-b"]

[features]
default = ["privacy", "avionix", "asd", "senhive", "flightaware", "opensky"]
privacy = []
aeroscope = []
asd = []
asterix = []
avionix = []
flightaware = []
opensky = []
safesky = []
senhive = []

[[bench]]
name = "dronepoint"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
csv.workspace = true
eyre.workspace = true
hcl-rs.workspace = true
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
strum.workspace = true
tabled.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true
