[package]
name = "import-adsb"
version = "0.1.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "CLI utility to import ADS-B data."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/drone-gencsv"
categories = ["command-line-utilities", "aerospace::drones"]
keywords = ["cat21", "asterix", "ads-b", "aeronautical-data"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-std = "1.12.0"
chrono.workspace = true
clap.workspace = true
csv = "1.1.6"
env_logger.workspace = true
fetiche-sources.workspace = true
fetiche-formats.workspace = true
hcl-rs.workspace = true
home.workspace = true
influxdb2 = "0.4.0"
log.workspace = true
percent-encoding = "2.2.0"
reqwest = { version = "0.11.12", features = ["blocking", "gzip", "json", "serde_json", "socks", "deflate"] }
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1.12"
sqlx = { version = "0.6.3", features = ["json", "ipnetwork", "mysql", "tls", "chrono", "macros", "runtime-async-std-native-tls"] }

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.6"
