[package]
name = "opensky-history"
version = "0.2.1"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Rust CLI app to fetch historical data through pyopensky."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones", "aerospace"]
keywords = ["aeronautical-data", "transformations", "fetiche", "python", "opensky"]
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "version"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive"] }
eyre = { version = "0.6", features = ["auto-install", "track-caller"] }
fetiche-common = { version = "0", path = "../common" }
fetiche-formats = { version = "0", path = "../formats" }
hcl-rs = "0.18"
polars = { version = "0.46", features = ["async", "serde", "lazy", "sql", "strings", "parquet", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.18"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

inline-python = "0.12"
seek_bufread = "1.2"
seekable_reader = "0.1"

[dev-dependencies]
rstest.workspace = true

[dependencies.pyo3]
version = "0.19"
features = ["auto-initialize"]

