[package]
name = "opensky-history"
version = "0.2.1"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Rust CLI app to fetch historical data through pyopensky."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones", "aerospace"]
keywords = ["aeronautical-data", "transformations", "fetiche", "python", "opensky"]
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "version"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2"
clap = { version = "4", features = ["cargo", "derive"] }
eyre = { version = "0.6", features = ["auto-install", "track-caller"] }
fetiche-common = { version = "0", path = "../common" }
polars = { version = "0.46", features = ["async", "serde", "lazy", "strings", "parquet", "json"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

inline-python = "0.13"

[dev-dependencies]
rstest = "0.24"

[dependencies.pyo3]
version = "0.23"
features = ["auto-initialize"]

