[package]
name = "opensky-history"
version = "0.2.1"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Rust CLI app to fetch historical data through pyopensky."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones", "aerospace"]
keywords = ["aeronautical-data", "transformations", "fetiche", "python", "opensky"]
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "version"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
dateparser.workspace = true
eyre.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
hcl-rs.workspace = true
polars.workspace = true
serde.workspace = true
serde_repr.workspace = true
strum.workspace = true
tabled.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

inline-python = "0.12"
seek_bufread = "1.2"
seekable_reader = "0.1"

[dev-dependencies]
rstest.workspace = true

[dependencies.pyo3]
version = "0.19"
features = ["auto-initialize"]

