[package]
name = "process-data"
version = "0.4.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Implement different processing of data."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["parquet", "drones", "aeronautical-data", "ads-b"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["clickhouse"]
clickhouse = []

[[bench]]
name = "distances"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
csv.workspace = true
datafusion.workspace = true
dateparser.workspace = true
eyre.workspace = true
fetiche-common.workspace = true
fetiche-macros.workspace = true
futures.workspace = true
hcl-rs.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

cached = { version = "0.53", features = ["async", "async_tokio_rt_multi_thread"] }
clap_complete = "4.5"
colorsys = "0.6"
enum_dispatch = "0.3"
klickhouse = { version = "0.13", features = ["derive", "geo-types", "serde", "bb8"] }
derive_builder = "0.20"
geo = "0.28"
itertools = "0.13"
kml = "0.8"
ml-progress = "0.1"
rand = "0"
rayon = "1.10"
rust-3d = "0.34"
regex = "1.11.0"

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

