[package]
name = "fetiche-sources"
version = "0.13.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Fetiche component for access methods to connect/fetch data."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["drones", "aeronautical-data", "fetiche"]

[features]
default = ["privacy"]
privacy = []
async = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "de"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
chrono.workspace = true
clap.workspace = true
dateparser.workspace = true
env_logger.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
hcl-rs.workspace = true
home.workspace = true
log.workspace = true
progress.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
strum.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

base64_light = "0.1"
csv = "1.3"
mini-moka = "0.10"
native-tls = "0.2"
percent-encoding = "2.2"
signal-hook = "0.3"
snafu = { version = "0.7", features = ["backtrace", "rust_1_61", "backtraces"] }
tap = "1"
tempfile = "3.10"

[dev-dependencies]
rstest.workspace = true

criterion = "0.5"
httpmock = { version = "0.6", features = ["colored", "color", "clap"] }
