[package]
name = "fetiche-sources"
version = "0.15.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Fetiche component for access methods to connect/fetch data."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["drones", "aeronautical-data", "fetiche"]

[features]
default = ["privacy"]
async = []
json = []
privacy = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "de"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv.workspace = true
eyre.workspace = true
chrono.workspace = true
clap.workspace = true
dateparser.workspace = true
env_logger.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
hcl-rs.workspace = true
home.workspace = true
log.workspace = true
progress.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
strum.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

base64_light = "0.1"
mini-moka = "0.10"
native-tls = "0.2"
percent-encoding = "2.3"
signal-hook = "0.3"
tap = "1"

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true
httpmock = { version = "0.7", features = ["colored", "color", "clap"] }
