[package]
name = "fetiche-sources"
version = "0.18.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Fetiche component for access methods to connect/fetch data."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["drones", "aeronautical-data", "fetiche"]

[features]
default = ["privacy", 'asd', "avionix", "senhive"]
async = []
json = []
privacy = []
aeroscope = []
asd = []
avionix = []
flightaware = []
opensky = []
safesky = []
senhive = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "read"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv.workspace = true
eyre.workspace = true
chrono.workspace = true
clap.workspace = true
dateparser.workspace = true
directories.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
fetiche-macros.workspace = true
hcl-rs.workspace = true
jiff.workspace = true
polars.workspace = true
ractor.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

async-trait = "0.1"
base64_light = "0.1"
enum_dispatch = "0.3"
humantime = "2.1"
indicatif = "0.17"
lapin = { version = "2.5", features = ["serde_json"] }
mini-moka = "0.10"
native-tls = "0.2"
percent-encoding = "2.3"
signal-hook = "0.3"
futures-util = "0.3.31"

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true
