[package]
name = "engine-macros"
version = "0.1.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Macros for Engine component of Fetiche."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones", "aerospace"]
keywords = ["aeronautical-data", "transformations", "fetiche"]

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
